# dwallet-helios

./: .gitignore  Cargo.toml  asdasd.json  blocks_api.json  eth_config_devnet.yml
.cargo/: config.toml
.github/workflows/: ci.yaml
benches/: README.md  harness.rs
cli/src/: main.rs
client/src/: client.rs  node.rs
common/src/: types.rs
config/: Cargo.toml
config/src/: base.rs  checkpoints.rs  config.rs  lib.rs  networks.rs  types.rs  utils.rs
config/tests/: base.rs  checkpoints.rs  eth_config.yaml
consensus/: Cargo.toml
consensus/src/: consensus.rs  constants.rs  lib.rs
consensus/src/rpc/: mock_rpc.rs  mod.rs  nimbus_rpc.rs
consensus/src/types/: mod.rs  primitives.rs  utils.rs
consensus/tests/: sync.rs
dwallet/: Cargo.toml
dwallet/src/: eth_state.rs  lib.rs  light_client.rs  utils.rs
dwallet/src/testdata/: aggregate_updates.json  eth_state.json  finality_update.json  optimistic_update.json  updates.json
examples/: basic.rs
execution/: Cargo.toml
execution/src/: contract_interactions.rs  errors.rs  evm.rs  execution.rs  lib.rs  proof.rs  state.rs  types.rs  utils.rs
execution/tests/: execution.rs
helios-ts/: Cargo.toml  package-lock.json  package.json
src/: lib.rs
